# cdumay_result

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: builder.rs  jsonify.rs  lib.rs  repr.rs  result.rs
tests/: test_builder.rs  test_result.rs
