[package]
name = "cdumay_result"
version = "1.0.4"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
categories = ["caching", "data-structures", "encoding"]
description = """A library to serialize and deserialize result using serde"""
documentation = "https://docs.rs/cdumay_result"
edition = "2021"
homepage = "https://github.com/cdumay/rust-cdumay_result"
keywords = ["Error", "serde", "Result"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/cdumay/rust-cdumay_result"

[dependencies]
cdumay_error = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
uuid = { version = "1.16", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
cdumay_error_standard = "1.0"
cdumay_context = "2.0"
